# caus

./: .gitignore  CMakeLists.txt  README.md
.github/: README.md
castor/: CMakeLists.txt
castor/include/: cellular-automata.hpp  printer.hpp  reader.hpp  simulator.hpp  utils.hpp  world.hpp
castor/src/: castor.cpp  cellular-automata.cpp  printer.cpp  reader.cpp  simulator.cpp  utils.cpp  world.cpp
caus/include/: cellular-automata.hpp  printer.hpp  reader.hpp  simulator.hpp  utils.hpp  world.hpp
caus/src/: caus.cpp  cellular-automata.cpp  printer.cpp  reader.cpp  simulator.cpp  world.cpp
include/: cellular-automata.hpp  printer.hpp  simulator.hpp
samples/: barber.txt  barber.yml  cheshire_cat.txt  cheshire_cat.yml  glider_gun.yml  harvester.yml  s01.yml  s02.yml  s03.txt  s03.yml  s04.txt  s04.yml  s05.yml  s06.yml  tumbler.txt  tumbler.yml  virus.txt  virus.yml
src/: caus.cpp  cellular-automata.cpp  cellular-automaton.cpp  reader.cpp  simulator.cpp  utils.cpp  world.cpp
